k8s/l3gl-devops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
  namespace: devops-l3gl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
        - name: product-api
          image: zarequiem/product-api:latest
          ports:
            - containerPort: 8086
          resources:
            requests:
              memory: "250Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "400m"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8086
            initialDelaySeconds: 90
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8086
            initialDelaySeconds: 120
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: product-api-service
  namespace: devops-l3gl
spec:
  selector:
    app: product-api
  ports:
    - port: 8086
      targetPort: 8086
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-api-ingress
  namespace: devops-l3gl
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product-api-service
                port:
                  number: 8086
